fixed readablility certificate regeneration pop-up

--- a/css/style.css
+++ b/css/style.css
@@ -5,23 +5,28 @@ body {
 .ui.menu.main-menu {
   margin-bottom: 0;
 }
+
 .ui.menu.side-menu {
   top: 65px;
   z-index: 1;
 }
+
 .ui.segment.main-content {
   margin-top: 65px;
   margin-left: 210px;
 }
+
 .ui.segment.main-content.compacted {
   margin: 0;
 }
+
 .ui.segment.app-segment {
   border-radius: 0;
   margin-top: 0;
   border-bottom: none;
   border-left: none;
 }
+
 .main-menu .item.right button {
   margin-left: 15px !important;
 }
@@ -35,7 +40,7 @@ body {
   text-align: center;
 }
 
-.rune .ui.image.label > img {
+.rune .ui.image.label>img {
   margin: 0 auto;
   max-width: none;
 }
@@ -63,11 +68,12 @@ body {
   color: #ffffff;
 }
 
-.ui.label.image.horizontal > .detail {
+.ui.label.image.horizontal>.detail {
   padding-top: 0.4em;
   padding-bottom: 0.4em;
   margin-top: -0.4em;
 }
+
 /* only for when using RuneDropEfficiency2 */
 .gem-table td {
   min-width: 60px !important;
@@ -83,6 +89,7 @@ td[bgcolor='lightgreen'] {
   * {
     color: rgb(255, 255, 255) !important;
   }
+
   body {
     background: rgb(51, 51, 51);
   }
@@ -90,6 +97,7 @@ td[bgcolor='lightgreen'] {
   .main-menu {
     background-color: rgb(51, 51, 51) !important;
   }
+
   .main-menu * {
     color: rgb(0, 0, 0) !important;
   }
@@ -109,6 +117,10 @@ td[bgcolor='lightgreen'] {
   .ui.top.left.small.popup.transition.visible *,
   textarea {
     color: rgb(0, 0, 0) !important;
+  }
+
+  .ui.small.modal.transition.visible.active * {
+    background-color: rgb(51, 51, 51);
   }
 
   .ui.selection.dropdown *,
